Newspaper pretend date
Make the newspaper pretend date into a parameter

--- a/Newspaper/template.tex
+++ b/Newspaper/template.tex
@@ -257,14 +257,12 @@ $endif$
 \fontsize{2cm}{3.5cm}\selectfont \bf The Industrialist
 \end{center}
 
-20 Oct \hfill 1890
+$newspaper_pretend_date$ \hfill 1890
 \rule{\textwidth}{1pt}
 
 \begin{multicols}{3}
 
 $body$
-
-
 
 \end{multicols}
 
